--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "fs-extra": "^6.0.1",
     "fs-jetpack": "^1.0.0",
-    "iohook": "^0.2.0",
+    "iohook": "^0.2.4",
     "keycode": "^2.2.0",
     "node-nircmd": "^1.0.5",
     "node-notifier": "^5.2.1",
@@ -49,7 +49,7 @@
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "chai": "^4.1.0",
     "css-loader": "^0.28.7",
-    "electron": "1.7.9",
+    "electron": "^3.0.10",
     "electron-builder": "^19.43.3",
     "electron-mocha": "^5.0.0",
     "file-loader": "^1.1.11",
@@ -65,7 +65,7 @@
   },
   "iohook": {
     "targets": [
-      "electron-54"
+      "electron-64"
     ],
     "platforms": [
       "win32"
